# Order

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci-release.yml
.order/: model.example.json
.order/context/: memory.json  memory.json.bak
.zed/: debug.json
crates/core/: Cargo.toml
crates/core/src/: commands.rs  encoding.rs  lib.rs  observability.rs  safety.rs  validation.rs
crates/core/src/model/: capabilities.rs  connection.rs  fallback.rs  info.rs  mod.rs
crates/core/src/tool/: command.rs  mod.rs  read.rs  search_file.rs  workspace.rs  write.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  language.rs  lib.rs  protocol.rs  types.rs
crates/order/: Cargo.toml
crates/order/src/: main.rs
crates/rander/: Cargo.toml
crates/rander/src/: focus_status.rs  history.rs  lib.rs  token_estimator.rs  tui.rs
crates/rander/src/editor/: handlers.rs  mod.rs  render.rs  session.rs  tree.rs  types.rs  utils.rs
crates/rander/src/test/: mod.rs
crates/rander/src/widget/: input_widget.rs  mod.rs
docs/: History.md
