[package]
name = "order"
version.workspace = true
edition.workspace = true
publish.workspace = true

authors= ["Shirasawa <3489840593@qq.com>"]

[[bin]]
name = "order"
path = "src/main.rs"

[dependencies]
core.workspace = true
rander.workspace = true
anyhow.workspace = true
serde = "1.0.228"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Console"] }
